# stitchnet

./: .gitignore  00_prepare_data.ipynb  01_download_networks.ipynb  02_generate_fragments.ipynb  03_stitchnet.ipynb  03_stitchnet_R2.ipynb  03_stitchnet_bean.ipynb  03_stitchnet_food.ipynb  03_stitchnet_food_experiments.ipynb  03_stitchnet_food_experiments_prepare_data.ipynb  03_stitchnet_plant.ipynb  04_render_graph.ipynb  05_eval_original_networks.ipynb  05_eval_original_networks_bean.ipynb  05_eval_original_networks_food.ipynb  05_eval_original_networks_plant.ipynb  05_finetuning.ipynb  06_ensemble.ipynb  06_finetuning.ipynb  07_ensemble.ipynb  07_number_of_samples_for_stitching.ipynb  08_plot_results.ipynb  09_plot_results.ipynb  09_plot_results_bean.ipynb  09_plot_results_food.ipynb  09_plot_results_food_experiments.ipynb  09_plot_results_food_experiments_progression.ipynb  09_plot_results_plant.ipynb  10_plot_all_stitchnets.ipynb  11_test_stitchnet_lib.ipynb  README.md  README.rst  _01_download_networks2.ipynb  _02_generate_fragments2.ipynb  _06_finetuning2.ipynb  pyproject.toml
stitchnet/: __init__.py
stitchnet/ensemble/: ensemble.py
stitchnet/finetuning/: finetune.py  finetune2.py
stitchnet/stitchonnx/: ptCKA.py  render.py  report.py  utils.py  viz.py
tests/: test_stitchnet.py
